--- a/Template LaTeX/TeXFiles/Bibliographie.tex
+++ b/Template LaTeX/TeXFiles/Bibliographie.tex
@@ -1,1 +1,26 @@
-\chapter{Bibliographie}
+\chapter*{Bibliographie}
+\addcontentsline{toc}{chapter}{Bibliographie}
+\begin{enumerate}
+	\item[[ 1]] N. Symth, Firebase Essentials. Cary: Payload Media, 2017.
+	\item[[ 2]] J. Crowther, Firebase. London: Constable, 2015.
+	\item[[ 3]] S. Madise, The regulation of mobile money. New York, NY: Springer Berlin Heidelberg,
+	2019.
+	\item[[ 4]] E. M. Ndadoum et B. Kordjé, Mobile money en Afrique - Son rôle pour l’inclusion
+	financière au Tchad. L’Harmattan, 2020.
+	\item[[ 5]] O. Fédior, « Mobile money/Mobile banking : La guerre des transferts - OSIRIS :
+	Observatoire sur les Systèmes d’Information, les Réseaux et les Inforoutes au Sénégal »,
+	mars 08, 2019. http://www.osiris.sn/Mobile-money-Mobile-banking-La.html (consulté le
+	juill. 27, 2020).
+	\item[[ 6]] B. A. Lassaad, « Cameroun: pénurie inédite de pièces de monnaie. », janv. 10, 2020.
+	https://www.aa.com.tr/fr/afrique/cameroun-pénurie-inédite-de-pièces-de-
+	monnaie/1698715 (consulté le juin 13, 2020).
+	
+	
+	\item[[ 7]] Glabb, Ryan et al. (2007), « Multi-mode operator for SHA-2 hash functions », in : journal of
+	systems architecture 53.2-3, p. 127–138.
+	\item[[ 8]] Dworkin, Morris J (2015), SHA-3 standard : Permutation-based hash and extendable-output
+	functions, rapp. tech.
+	\item[[ 9]] Dolmatov, Vasily et Alexey Degtyarev (2013), « GOST R 34.11-2012 : hash function », in :
+	Independent Submission, Ed. Request for Comments : Updates 5831, p. 2070–1721.
+	
+\end{enumerate}
