--- a/Template LaTeX/TeXFiles/EnvironnementDeTravail.tex
+++ b/Template LaTeX/TeXFiles/EnvironnementDeTravail.tex
@@ -54,10 +54,10 @@ Visual Paradigm  en ligne est un outil de création de diagrammes en ligne. Vous
 \end{table}
 \end{comment}
 %Table \ref{table:kysymys} on page \pageref{table:kysymys} refers to the ...
-\newpage
+
 \subsection{Diagramme de cas d’utilisation}
 \begin{figure}[h!]
-	\includegraphics[width=18cm, height=21cm]{./Template LaTeX/Images/use_case.png}
+	\includegraphics[width=18cm, height=12cm]{./Template LaTeX/Images/use_case.png}
 	\caption{Diagramme de cas d’utilisation.}
 	\label{fig1:use_case}
 	
@@ -65,6 +65,10 @@ Visual Paradigm  en ligne est un outil de création de diagrammes en ligne. Vous
 \end{figure}
 \newpage
 \subsection{Diagramme d’activité}
+Cette section a pour objectif de mettre en surbrillance le processus quelques fonctionnalités de
+l’application pour voir les détailles. J’ai choisi trois cas d’utilisation, à savoir, la création d’un compte,
+la transfert d'argent et l'authentification.
+\newpage
 \subsubsection{Création de compte}
 Le diagramme d’activité qu’illustre la figure~\ref{activiteCompte} décrit le cas d’utilisation « Créer un compte ».
 \begin{figure}[h!]
