--- a/Template LaTeX/TeXFiles/new_Conclusion.tex
+++ b/Template LaTeX/TeXFiles/new_Conclusion.tex
@@ -1,1 +1,11 @@
-\chapter{Conclusion}
+\chapter*{Conclusion}
+\addcontentsline{toc}{chapter}{Conclusion}
+Dans ce chapitre, avons décrit brièvement le processus de développement de notre application
+de transfert d'argent en spécifiant l’environnement de développement, le choix des
+outils ainsi que la démarche suivie pour la réalisation.
+En effet, nous avons achevé l’implémentation tout en respectant la conception, mais les tests
+des différents cas d’utilisations sont toujours en cours envie d’une amélioration de l’application
+avant sa publication.
+En d’autres termes, nous avons la version beta (test et amélioration avant sa publication) de
+l’application installée dans notre environnement de développement. Aussi, nous avons prévu la
+période pendant laquelle la solution finale sera déployée les plateformes de téléchargement.
