--- a/Template LaTeX/TeXFiles/new_realisation.tex
+++ b/Template LaTeX/TeXFiles/new_realisation.tex
@@ -22,6 +22,11 @@ Flutter est un framework de développement d’applications mobiles open source 
 d’applications multiplateformes. Flutter est également utilisé pour créer des apps interactives qui s’exécutent sur des pages web ou sur le bureau.
 \end{comment}
 \subsubsection{Editeur de texte : VS Code}
+\begin{figure}[h]
+	\includegraphics[scale=0.4]{./Template LaTeX/Images/VSCode.jpg}
+	\centering
+	\caption{VS Code}
+\end{figure}
 VS Code (Visual Studio Code) est un éditeur de code source réalisé par Microsoft pour Win-
 dows, Linux et macOS.Les fonctionnalités incluent la prise en charge du débogage, lacoloration
 syntaxique, la saisie semi-automatique intelligente du code, les extraits de code, la refactorisation du
@@ -29,10 +34,20 @@ code et Gitintégré. Les utilisateurs peuvent modifier le thème,les raccourcis
 installer des extensions qui ajoutent des fonctionnalités supplémentaires.\newline Pour en savoir plus, veillez
 visiter le lien : \href{https://en.wikipedia.org/wiki/VisualStudioCode}{https://en.wikipedia.org/wiki/VisualStudioCode}
 \subsubsection{IDE : Android Studio}
+\begin{figure}[h]
+	\includegraphics[scale=0.2]{./Template LaTeX/Images/Android_Studio_Icon_3.6.svg}
+	\centering
+	\caption{Android Studio}
+\end{figure}
 Android Studio est un environnement de développement pour développer des applications mobiles Android. Il est basé sur IntelliJ IDEA et utilise le moteur de production Gradle. Il peut être téléchargé sous les systèmes d'exploitation Windows, macOS, Chrome OS et Linux.
 \newline Pour en savoir plus, veillez
 visiter le lien : \href{https://en.wikipedia.org/wiki/AndroidStudio.}{https://en.wikipedia.org/wiki/AndroidStudio.}
 \subsubsection{Git}
+\begin{figure}[h]
+	\includegraphics[scale=0.3]{./Template LaTeX/Images/Git-Icon.png}
+	\centering
+	\caption{Git}
+\end{figure}
 Git est un système de contrôle de version distribué gratuit et Open Source conçu pour gérer des
 petits projets aux très grands projets avec rapidité et efficacité. C'est un logiciel libre créé par
 Linus Torvalds, auteur du noyau Linux, et distribué selon les termes de la licence publique
@@ -62,12 +77,17 @@ veillez
 visiter le lien :
 \href{https://git-scm.com/s}{https://git-scm.com/s}
 \subsubsection{Le SGBD Firebase}
+\begin{figure}[h]
+	\includegraphics[scale=0.1]{./Template LaTeX/Images/firebase.png}
+	\centering
+	\caption{Firebase}
+\end{figure}
 Firebase est une plateforme d’hébergement pour n’importe quel type d’application (mobiles,
 Web, etc.) qui fournit aux développeurs une pléthore d'outils et de services pour les aider à
 développer des applications de haute qualité, à élargir leur base d'utilisateurs et à générer
 davantage de profits. Il propose d'héberger en NoSQL et en temps réel des bases de données,
 du contenu, de l'authentification sociale (Google, Facebook, Twitter et Github) et des notifications, ou encore des services tels que par exemple un serveur de communication en
-temps réel [38].
+temps réel [1].
 Lancé en 2011 sous le nom d'Envolve, par Andrew Lee et par James Templin, le service est
 racheté par Google en octobre 2014. Il appartient aujourd'hui à la maison mère de Google :
 Alphabet (maison-mère de groupe qui regroupe une majorité des activités du groupe comme
@@ -81,8 +101,9 @@ extrêmement riches et adaptés au monde du mobile, dont la liste suivante :
 \setcounter{secnumdepth}{5}
 \paragraph{Firebase Realtime Database :\newline}
 
+
  Firebase Realtime Database est une base de données NoSQL hébergée dans le cloud qui vous
-permet de stocker et de synchroniser des données entre vos utilisateurs en temps réel [38], [39].
+permet de stocker et de synchroniser des données entre vos utilisateurs en temps réel [1], [2].
 Realtime Database est vraiment juste un gros objet JSON que les développeurs peuvent gérer
 en temps réel.
 La synchronisation en temps réel permet à vos utilisateurs d'accéder facilement à leurs données
@@ -96,7 +117,7 @@ locales sont automatiquement synchronisées.
 \paragraph{Firebase Authentication :\newline}
 Firebase Authentication fournit des services backend, des SDK faciles à utiliser et des
 bibliothèques d'interfaces utilisateur prêtes à l'emploi pour authentifier les utilisateurs de votre
-application [38], [39].
+application [1], [2].
 Vous pouvez authentifier les utilisateurs de votre application à l'aide des méthodes suivantes :
 \begin{itemize}[label=$\ast$]
 	\item Email et mot de passe
@@ -112,7 +133,7 @@ finaux.
 \paragraph{Firebase Cloud Messaging (FCM) :\newline}
 Firebase Cloud Messaging (FCM) fournit une connexion fiable et à faible consommation de
 batterie entre votre serveur et vos périphériques, vous permettant d'envoyer et de recevoir
-gratuitement des messages et des notifications sur iOS, Android et sur le Web [38], [39]. Vous
+gratuitement des messages et des notifications sur iOS, Android et sur le Web [1], [2]. Vous
 pouvez envoyer des messages de notification (limite de 2 Ko) et des messages de données
 (limite de 4 Ko).
 En utilisant FCM, vous pouvez facilement cibler les messages en utilisant des segments
@@ -126,7 +147,7 @@ telles que la définition des priorités, des sons et des dates d'expiration, ai
 \paragraph{Cloud Firestore :\newline}
 Cloud Firestore est une base de données de documents NoSQL qui vous permet de facilement
 stocker, synchroniser et interroger des données pour vos applications mobiles et Web à l'échelle
-mondiale [38], [39]. Bien que cela puisse ressembler à quelque chose de similaire à la base de
+mondiale [1], [2]. Bien que cela puisse ressembler à quelque chose de similaire à la base de
 données en temps réel, Firestore apporte beaucoup de nouvelles choses à la plateforme qui est
 en fait quelque chose de complètement différent de Realtime Database.
 Là où Realtime Database stocke des données sous la forme d'un arbre JSON géant, Cloud
@@ -142,6 +163,12 @@ les données dont vous avez besoin à l'aide de requêtes. Toutes les requêtes 
 fonction de la taille de votre jeu de résultats. Votre application est donc prête à évoluer depuis
 le premier jour.
 \subsubsection{SGBD MariaDB}
+
+\begin{figure}[h]
+	\includegraphics[scale=0.5]{./Template LaTeX/Images/logo-mariadb-500px.png}
+	\centering
+	\caption{SGBD MariaDB}
+\end{figure}
 Un gestionnaire de base de données libre.
 ce projet est assurée par la fondation Maria DB, et sa
 maintenance par la société Monty Program AB, créateur du
@@ -154,6 +181,12 @@ table. Du coup il améliore la rapidité et la souplesse de
 l'ensemble.
 
 \subsubsection{Logiciel de modélisation: Modelio}
+\begin{figure}[h]
+	\includegraphics[scale=0.5]{./Template LaTeX/Images/modelio.jpg}
+	\centering
+	\caption{Modelio}
+\end{figure}
+\newpage
 Modelio est un logiciel open source et multiplateforme permettant, entre autres, la modélisation
 UML et Business Process Model and Notation (BPMN). Pour en savoir plus, veuillez visiter le lien
 \href{https://www.modelio.org/about-modelio/features.html.}{https://www.modelio.org/about-modelio/features.html.}
@@ -166,7 +199,7 @@ réalisés avec Modelio sont ceux mentionnés ci-après.
 
 
 \subsubsection{Motifs d’architecture logicielle}
-\paragraph{MVC}
+\paragraph{MVC \newline}
 Le patron de conception MVC est l’une des bases du Framework
 laravel, c’est-à-dire modèle-vue- contrôleur. L’interaction avec la
 base de données est assurée par le Model, les regroupe, traite et
@@ -181,7 +214,7 @@ Les composants sont séparés en ces trois catégories précédentes
 permet une clarté de architecture des dossiers et simplifie
 grandement la tâche aux développeurs.
 \begin{figure}[h!]
-	\includegraphics[width=15cm, height=8cm]{./Template LaTeX/Images/Modèle-vue-contrôleur_(MVC)_-_fr.png}
+	\includegraphics[width=15cm, height=6cm]{./Template LaTeX/Images/Modèle-vue-contrôleur_(MVC)_-_fr.png}
 	\caption{MVC}
 	\label{fig:birds}
 \end{figure}
@@ -203,10 +236,20 @@ grandement la tâche aux développeurs.
 	contrôleur .\newline
 \end{enumerate}
 \subsubsection{Serveur Web : Amazon Web Services (AWS)}
+\begin{figure}[h]
+	\includegraphics[scale=0.3]{./Template LaTeX/Images/512px-Amazon_Web_Services_Logo.svg.png}
+	\centering
+	\caption{Amazon Web Services (AWS)}
+\end{figure}
 Amazon Web Services (AWS) est la plateforme cloud la plus complète et la plus largement adoptée au monde. Elle propose plus de 200 services complets issus de centres de données du monde entier. Des millions de clients (dont certaines des startups les plus dynamiques au monde, de très grandes entreprises et des agences fédérales de premier plan) utilisent AWS pour réduire leurs coûts, gagner en agilité et innover plus rapidement.
 
 \subsection{Conception}
 \subsubsection{Langage de modélisation : UML}
+\begin{figure}[h]
+	\includegraphics[scale=1]{./Template LaTeX/Images/formation-uml-analser-concevoir.png}
+	\centering
+	\caption{UML}
+\end{figure}
 On a utilisé UML comme langage de modélisation.
 Langage de modélisation unifié UML (Unified modeling Langage) un
 consiste a modéliser une application logicielle d'une façon standard
@@ -222,11 +265,21 @@ moyens de description et de modélisation des acteurs.
 \section{Choix des outils de travail }
 \subsection{Langages utilisés}
 \subsubsection{Dart}
+\begin{figure}[h]
+	\includegraphics[scale=0.4]{./Template LaTeX/Images/Dart_programming_language_logo.svg.png}
+	\centering
+	\caption{Dart}
+\end{figure}
 Dart est un langage de programmation open source à usage général. Il est initialement développé par Google. Dart est un langage orienté objet avec une syntaxe de C-style. Il prend en chargent les concepts de programmation tels que les interfaces, les classes, contrairement aux autres langages de programmation, Dart ne prend pas en charge les tableaux.
 Les collections Dart peuvent être utilisées pour répliquer des structures de données telles que des tableaux, des génériques et un typage facultatif.
 \newline Pour en savoir plus, veillez
 visiter le lien : \href{https://www.tutorialspoint.com/flutter/flutter_introduction_to_dart_programming.htm}{https://www.tutorialspoint.com/flutter/dart}
 \subsubsection{PHP}
+\begin{figure}[h]
+	\includegraphics[scale=0.3]{./Template LaTeX/Images/PHP-logo.svg.png}
+	\centering
+	\caption{PHP}
+\end{figure}
 PHP est un langage de script utilisé le plus souvent côté serveur : dans cette architecture, le serveur interprète le code PHP des pages web demandées et génère du code (HTML, XHTML, CSS par exemple) et des données (JPEG, GIF, PNG par exemple) pouvant être interprétés et rendus par un navigateur web. PHP peut également générer d'autres formats comme le WML, le SVG et le PDF.
 
 Il a été conçu pour permettre la création d'applications dynamiques, le plus souvent développées pour le Web. PHP est le plus souvent couplé à un serveur Apache bien qu'il puisse être installé sur la plupart des serveurs HTTP tels que IIS ou nginx. Ce couplage permet de récupérer des informations issues d'une base de données, d'un système de fichiers (contenu de fichiers et de l'arborescence) ou plus simplement des données envoyées par le navigateur afin d'être interprétées ou stockées pour une utilisation ultérieure.
@@ -235,6 +288,11 @@ visiter le lien : \href{https://fr.wikipedia.org/wiki/PHP}{https://fr.wikipedia.
 \subsection{Frameworks utilisés}
 
 \subsubsection{Flutter}
+\begin{figure}[h]
+	\includegraphics[scale=0.3]{./Template LaTeX/Images/Flutter.png}
+	\centering
+	\caption{Flutter}
+\end{figure}
 Flutter est un framework de développement d’applications mobiles open source de Google. La principale raison de sa popularité est qu’il prend en charge la création 		   
 d’applications multiplateformes. Flutter est également utilisé pour créer des apps interactives qui s’exécutent sur des pages web ou sur le bureau.\newline
 \textbf {- Les caractéristiques de Flutter :}
@@ -248,17 +306,25 @@ d’applications multiplateformes. Flutter est également utilisé pour créer d
 \end{enumerate}
 
 
-\textbf {- Architecture d’une application Flutter :} \newline \newline \newline
+\textbf {- Architecture d’une application Flutter :} 
 \begin{figure}[h!]
-	\includegraphics[width=400px,height=200px]{./Template LaTeX/Images/Flutter_architect.png}
+	\includegraphics[width=450px,height=250px]{./Template LaTeX/Images/Flutter_architect.png}
 	\caption{Architecture d’une application Flutter.}
 	\label{fig:birds}
 \end{figure}
+\newpage
 \subsubsection{Laravel}
+\begin{figure}[h]
+	\includegraphics[scale=0.2]{./Template LaTeX/Images/462px-Laravel.svg.png}
+	\centering
+	\caption{Laravel}
+\end{figure}
 Laravel est un framework web open-source écrit en  \href{https://fr.wikipedia.org/wiki/PHP}{PHP} respectant le principe modèle-vue-contrôleur et entièrement développé en programmation orientée objet. Laravel est distribué sous \href{https://fr.wikipedia.org/wiki/Licence_MIT}{licence MIT}, avec ses sources hébergées sur 
-\href{https://fr.wikipedia.org/wiki/GitHub}{GitHub}.
+\href{https://fr.wikipedia.org/wiki/GitHub}{GitHub}.\newline\newline
+\textbf {- Les caractéristiques de Laravel :}
+
 \begin{figure}[h!]
-	\includegraphics[width=400px,height=155px]{./Template LaTeX/Images/Laravel-MVC-framework.jpg}
+	\includegraphics[width=500px,height=200px]{./Template LaTeX/Images/Laravel-MVC-framework.jpg}
 	\caption{Architecture de Laravel}
 	\label{fig:birds}
 \end{figure}
@@ -339,10 +405,16 @@ Dans ce qui suit, nous présentons quelques écrans de notre produit final des a
 			\end{subfigure}
 			\qquad\tikz[baseline=-\baselineskip]\draw[ultra thick,->] (0,0) -- ++ (1,0);\qquad
 			\begin{subfigure}{0.3\textwidth}
-				\includegraphics[width=\hsize, valign=m]{./Template LaTeX/Images/2.jpg}
+				\includegraphics[width=\hsize, valign=m]{./Template LaTeX/Images/23.jpg}
 				\caption{Scanner le code MRZ}
 				\label{fig.painel_sicapi}
 			\end{subfigure}
+	
+		\begin{subfigure}{0.3\textwidth}
+			\includegraphics[width=\hsize, valign=m]{./Template LaTeX/Images/24.jpg}
+			\caption{Saisir le rest des données}
+			\label{fig.painel_sicapi}
+		\end{subfigure}
 			\caption{Interface d’inscription}
 			\label{fig.sicapi}
 		\end{figure}
@@ -436,7 +508,7 @@ Dans ce qui suit, nous présentons quelques écrans de notre produit final des a
 \end{figure}
 \newpage
 \item \textbf{L’interface de transfert
-	:}La  \textbf{figure 4.7} montre l'historique des transactions de l'utilisateur  vers les bénéficiaires avec détails pour chaque transaction.
+	:}La figure~\ref{transfert} montre l'historique des transactions de l'utilisateur  vers les bénéficiaires avec détails pour chaque transaction.
 
 \begin{figure}
 	\centering
@@ -461,7 +533,7 @@ Dans ce qui suit, nous présentons quelques écrans de notre produit final des a
 		\label{fig:five over x}
 	\end{subfigure}
 	\caption{Transferts}
-	\label{fig:three graphs}
+	\label{transfert}
 \end{figure}
 
 \item \textbf{L’interface de discussion
@@ -521,14 +593,114 @@ Dans ce qui suit, nous présentons quelques écrans de notre produit final des a
 	:} À partir de cette fenêtre le client a l'accès aux autres fonctionalistes de l'application (Modifier mot de passe,changer la langue ....)
 \begin{figure}%
 	\centering
-	{{\includegraphics[width=5cm]{./Template LaTeX/Images/21.jpg} }}%
+	{{\includegraphics[width=5cm]{./Template LaTeX/Images/22.jpg} }}%
 	\caption{Interface de menu}%
 	\label{fig:example}%
 \end{figure}
 \end{itemize}
 
-\newpage
 \subsubsection{Application ServiceClient}
-
+\begin{itemize}[label=$\ast$]
+		\item \textbf{L’interface
+		d’authentification
+		:} La figure suivante représente l’interface d’authentification de notre application. Elle permet aux utilisateurs de s’identifier en introduisant leurs identifiants afin d’accéder aux fonctionnalités de l’application.
+	
+	\begin{figure}%
+		\centering
+		{{\includegraphics[width=5cm]{./Template LaTeX/Images/3.jpg} }}%
+		\caption{Interface d'authentification}%
+		\label{fig:example}%
+	\end{figure}
+\newpage
+	\item \textbf{L’interface du compte administrateur
+	:} La figure~\ref{Home} représente la page principale de l’application pour l'administrateur. C’est à partir de cette fenêtre qu’est accessible la majorité des fonctionnalités de base de l’application(Gérer les comptes de service client).
+\begin{comment}
+	content...
+}
+\begin{figure}
+	\centering
+	\begin{subfigure}[b]{0.3\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{./Template LaTeX/Images/6.jpg}
+		\caption{Interfaces d’accueil}
+		\label{fig:y equals x}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}[b]{0.3\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{./Template LaTeX/Images/7.jpg}
+		\caption{Supprimer un compte}
+		\label{fig:three sin x}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}[b]{0.3\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{./Template LaTeX/Images/8.jpg}
+		\caption{Mettre à jour un compte}
+		\label{fig:five over x}
+	\end{subfigure}
+	\caption{Interface du compte principal
+}
+\label{Home}
+\end{figure}
+\end{comment}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}
+	\centering
+	\begin{subfigure}[b]{0.3\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{./Template LaTeX/Images/6.jpg}
+		\caption{Interfaces d’accueil}
+		\label{fig:y equals x}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}[b]{0.3\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{./Template LaTeX/Images/7.jpg}
+		\caption{Gérer un compte}
+		\label{fig:three sin x}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}[b]{0.3\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{./Template LaTeX/Images/8.jpg}
+		\caption{Mettre à jour un compte}
+		\label{fig:five over x}
+	\end{subfigure}
+	\newline
+	\centering
+	\begin{subfigure}{0.3\textwidth}
+		\includegraphics[width=\hsize, valign=m ]{./Template LaTeX/Images/9.jpg}
+		\caption{Ajouter un compte}
+		\label{fig.SICAPI}
+	\end{subfigure}
+	%\qquad\tikz[baseline=-\baselineskip]\draw[ultra thick,->] (0,0) -- ++ (1,0);\qquad
+	
+	\caption{Interface du compte administrateur
+}
+\label{Home}
+\end{figure}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
+\item \textbf{L’interface du compte service client
+	:} 
+La figure~\ref{serviceCl} représente la page principale de l’application pour le compte service client C’est à partir de cette fenêtre l'utilisateur peut répondre aux clients.
+\begin{figure}
+	\centering
+\begin{subfigure}{0.3\textwidth}
+	\includegraphics[width=\hsize, valign=m ]{./Template LaTeX/Images/9.jpg}
+	\caption{Interfaces d’accueil}
+	\label{klk}
+\end{subfigure}
+\begin{subfigure}{0.3\textwidth}
+	\includegraphics[width=\hsize, valign=m ]{./Template LaTeX/Images/20.jpg}
+	\caption{Interface de discussion}
+	\label{klk}
+\end{subfigure}
+	\caption{Interface du compte administrateur
+}
+\label{serviceCl}
+\end{figure}
+\end{itemize}
 
 
