le vrai vesion 1

--- a/Template LaTeX/TeXFiles/new_realisation.tex
+++ b/Template LaTeX/TeXFiles/new_realisation.tex
@@ -533,7 +533,7 @@ Dans ce qui suit, nous présentons quelques écrans de notre produit final des a
 		\label{fig:five over x}
 	\end{subfigure}
 	\caption{Transferts}
-	\label{transfert}b
+	\label{transfert}
 \end{figure}
 
 \item \textbf{L’interface de discussion
